--- a/IBM-Coffee-FrontEnd/angular.json
+++ b/IBM-Coffee-FrontEnd/angular.json
@@ -99,5 +99,11 @@
         }
       }
     }
+  },
+  "cli": {
+    "defaultCollection": "@ngrx/schematics",
+    "schematicCollections": [
+      "@ngrx/schematics"
+    ]
   }
 }
