--- a/IBM-Coffee-FrontEnd/package.json
+++ b/IBM-Coffee-FrontEnd/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.0.0",
     "@ngrx/effects": "^14.0.1",
     "@ngrx/entity": "^14.0.1",
+    "@ngrx/router-store": "^14.0.1",
     "@ngrx/store": "^14.0.1",
     "@ngrx/store-devtools": "^14.0.1",
     "rxjs": "~7.5.0",
